--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ env:
   global:
     - COMMIT=${TRAVIS_COMMIT::8}
 
-install: make
+install:
+  - make
+  - make start
 
 script: make test
 
@@ -26,6 +28,9 @@ after_success: |
       make VERSION=latest release
     fi
   fi
+
+after_failure:
+  - make logs
 
 notifications:
   email:
