--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
 env:
   global:
     - COMMIT=${TRAVIS_COMMIT::8}
+    - VERSION=4.2
 
 install:
   - make
@@ -25,6 +26,10 @@ after_success: |
     fi
 
     make VERSION=latest release
+
+    if [ "$VERSION" == "4.2" ]; then
+      make VERSION=latest release
+    fi
   fi
 
 after_failure:
