--- a/4.3/Dockerfile
+++ b/4.3/Dockerfile
@@ -1,5 +1,11 @@
-FROM alpine:3.5
-MAINTAINER Wodby <admin@wodby.com>
+FROM alpine:3.6
+
+ENV ADMINER_VER 4.3.1
+
+ENV ADMINER_URL https://github.com/vrana/adminer/releases/download/v${ADMINER_VER}/adminer-${ADMINER_VER}-mysql-en.php
+ENV ADMINER_THEME_URL https://raw.githubusercontent.com/vrana/adminer/master/designs/nicu/adminer.css
+
+LABEL version=$VERSION
 
 RUN apk add --update --no-cache \
         bash \
@@ -27,18 +33,14 @@ RUN apk add --update --no-cache \
         -e "s/^track_errors.*/track_errors = On/" \
         /etc/php7/php.ini && \
 
-    echo "error_log = \"/proc/self/fd/2\"" | tee -a /etc/php7/php.ini
+    echo "error_log = \"/proc/self/fd/2\"" | tee -a /etc/php7/php.ini && \
 
-ENV VERSION 4.2.5
-ENV DESIGN nicu
-LABEL version=$VERSION
-
-RUN addgroup -g 82 -S www-data && \
+    addgroup -g 82 -S www-data && \
     adduser -u 82 -D -S -G www-data www-data && \
     mkdir -p /var/www/html && \
     chown -R www-data:www-data /var/www && \
-    curl -s -o /var/www/html/adminer.php -L https://github.com/vrana/adminer/releases/download/v${VERSION}/adminer-${VERSION}-mysql-en.php && \
-    curl -s -o /var/www/html/adminer.css -L https://raw.githubusercontent.com/vrana/adminer/master/designs/${DESIGN}/adminer.css
+    curl -s -o /var/www/html/adminer.php -L ${ADMINER_URL} && \
+    curl -s -o /var/www/html/adminer.css -L ${ADMINER_THEME_URL}
 
 COPY index.php /var/www/html
 
