--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,12 @@ services:
 env:
   global:
     - COMMIT=${TRAVIS_COMMIT::8}
-    - VERSION=4.2
+    - VERSION=4.3
+    - LATEST=4.3
 
 install:
-  - make
-  - make start
-
-script: make test
+  - cd ./$VERSION
+  - make && make test
 
 after_success: |
   if [ "$TRAVIS_PULL_REQUEST" == "false" ] && ([ "$TRAVIS_BRANCH" == "master" ] || [ -n "$TRAVIS_TAG" ]); then
@@ -25,15 +24,10 @@ after_success: |
       make VERSION="$VERSION-$TRAVIS_TAG" release
     fi
 
-    if [ "$VERSION" == "4.2" ]; then
+    if [ "$VERSION" == "$LATEST" ]; then
       make VERSION=latest release
     fi
   fi
 
 after_failure:
   - make logs
-
-notifications:
-  email:
-    on_success: never
-    on_failure: always
