Issue #1: Adds postgresql support and switch to agnostic version

--- a/4.3/Dockerfile
+++ b/4.3/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine:3.6
 
 ENV ADMINER_VER 4.3.1
 
-ENV ADMINER_URL https://github.com/vrana/adminer/releases/download/v${ADMINER_VER}/adminer-${ADMINER_VER}-mysql-en.php
+ENV ADMINER_URL https://github.com/vrana/adminer/releases/download/v${ADMINER_VER}/adminer-${ADMINER_VER}-en.php
 ENV ADMINER_THEME_URL https://raw.githubusercontent.com/vrana/adminer/master/designs/nicu/adminer.css
 
 RUN apk add --update --no-cache \
@@ -15,6 +15,7 @@ RUN apk add --update --no-cache \
         php7-mbstring \
         php7-pdo \
         php7-pdo_mysql \
+        php7-pdo_pgsql \
         php7-mysqli && \
 
     sed -i \
