Support themes and plugins

--- a/tests/mariadb/docker-compose.yml
+++ b/tests/mariadb/docker-compose.yml
@@ -16,5 +16,7 @@ services:
     environment:
       ADMINER_DEFAULT_DB_HOST: mariadb
       ADMINER_DEFAULT_DB_NAME: adminer
+      ADMINER_DESIGN: nette
+      ADMINER_PLUGINS: tables-filter tinymce
     ports:
       - 8080:9000
