--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ services:
 - docker
 
 env:
-- BASE_IMAGE_STABILITY_TAG=4.13.2
-- ADMINER_VER=4.7.5 ADMINER_LANG=en TAGS=4.7,4,latest
+  global:
+  - BASE_IMAGE_STABILITY_TAG=4.13.2
+  - ADMINER_VER=4.7.5 ADMINER_LANG=en TAGS=4.7,4,latest
 
 script:
 - make && make test
