--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -7,6 +7,9 @@ inputs:
   tags:
     description: image tags
     required: true
+  alpine_ver:
+    description: alpine version
+    required: true
   platform:
     description: docker platform
     required: false
@@ -19,6 +22,7 @@ runs:
       ADMINER_VER: ${{ inputs.version }}
       PLATFORM: ${{ inputs.platform }}
       TAGS: ${{ inputs.tags }}
+      ALPINE_VER: ${{ inputs.alpine_ver }}
     run: |
       set -e
       make buildx-build-amd64
