--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,3 +27,18 @@ jobs:
         version: 4.8.1
         tags: 4.8,4,latest
         platform: linux/amd64,linux/arm64
+        alpine_ver: 3.15
+  adminer-4-alpine313:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: docker/setup-qemu-action@v1
+      with:
+        platforms: amd64,arm64
+    - uses: docker/setup-buildx-action@v1
+    - uses: ./.github/actions
+      with:
+        version: 4.8.1
+        tags: 4.8-alpine3.13,4-alpine3.13,alpine3.13
+        platform: linux/amd64,linux/arm64
+        alpine_ver: 3.13
