--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,21 +9,47 @@ on:
     - '*'
 
 env:
-  BASE_IMAGE_STABILITY_TAG: 4.60.1
-  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  ADMINER5: '5.4.0'
 
 jobs:
-  adminer-5:
-    runs-on: ubuntu-latest
+  adminer-build:
+    strategy:
+      matrix:
+        arch:
+          - amd64
+          - arm64
+        include:
+          - arch: amd64
+            runner: ubuntu-24.04
+          - arch: arm64
+            runner: ubuntu-24.04-arm
+    runs-on: ${{ matrix.runner }}
     steps:
-    - uses: actions/checkout@v4
-    - uses: docker/setup-qemu-action@v3
-      with:
-        platforms: amd64,arm64
-    - uses: docker/setup-buildx-action@v3
-    - uses: ./.github/actions
-      with:
-        version: '5.4.0'
-        tags: 5.4,5,latest
-        platform: linux/amd64,linux/arm64
+      - uses: actions/checkout@v5
+      - uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: build and push
+        env:
+          ADMINER_VER: ${{ env.ADMINER5 }}
+          ARCH: ${{ matrix.arch }}
+        run: |
+          make
+          make test
+          make push
+  adminer-push:
+    runs-on: ubuntu-latest
+    needs:
+      - adminer-build
+    steps:
+      - uses: actions/checkout@v5
+      - uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: ./.github/actions
+        with:
+          version: ${{ env.ADMINER5 }}
+          latest: true
+          latest_major: true
